milc_qcd-develop/ks_spectrum/error_compile
../generic/io_scidac.c: In function ‘save_scidac’:
../generic/io_scidac.c:253:21: error: ‘QIO_PARTFILE_DIR’ undeclared (first use in this function); did you mean ‘QIO_PARTFILE’?
   else if(volfmt == QIO_PARTFILE_DIR){
                     ^~~~~~~~~~~~~~~~
                     QIO_PARTFILE
../generic/io_scidac.c:253:21: note: each undeclared identifier is reported only once for each function it appears in
../generic/io_scidac.c: In function ‘save_partfile_dir_scidac’:
../generic/io_scidac.c:325:32: error: ‘QIO_PARTFILE_DIR’ undeclared (first use in this function); did you mean ‘QIO_PARTFILE’?
   return save_scidac(filename, QIO_PARTFILE_DIR, QIO_SERIAL, QIO_ILDGNO, NULL);
                                ^~~~~~~~~~~~~~~~
                                QIO_PARTFILE
../generic/io_scidac.c: In function ‘save_partfile_dir_ildg’:
../generic/io_scidac.c:349:32: error: ‘QIO_PARTFILE_DIR’ undeclared (first use in this function); did you mean ‘QIO_PARTFILE’?
   return save_scidac(filename, QIO_PARTFILE_DIR, QIO_SERIAL, QIO_ILDGLAT,
                                ^~~~~~~~~~~~~~~~
                                QIO_PARTFILE
../generic/io_scidac.c: In function ‘save_color_matrix_scidac_from_site’:
../generic/io_scidac.c:667:21: error: ‘QIO_PARTFILE_DIR’ undeclared (first use in this function); did you mean ‘QIO_PARTFILE’?
   else if(volfmt == QIO_PARTFILE_DIR){
                     ^~~~~~~~~~~~~~~~
                     QIO_PARTFILE
../generic/io_scidac.c: In function ‘save_color_matrix_scidac_from_field’:
../generic/io_scidac.c:731:21: error: ‘QIO_PARTFILE_DIR’ undeclared (first use in this function); did you mean ‘QIO_PARTFILE’?
   else if(volfmt == QIO_PARTFILE_DIR){
                     ^~~~~~~~~~~~~~~~
                     QIO_PARTFILE
../generic/io_scidac.c: In function ‘save_random_state_scidac_from_site’:
../generic/io_scidac.c:831:21: error: ‘QIO_PARTFILE_DIR’ undeclared (first use in this function); did you mean ‘QIO_PARTFILE’?
   else if(volfmt == QIO_PARTFILE_DIR){
                     ^~~~~~~~~~~~~~~~
                     QIO_PARTFILE
../generic/io_scidac.c: In function ‘save_complex_scidac’:
../generic/io_scidac.c:928:21: error: ‘QIO_PARTFILE_DIR’ undeclared (first use in this function); did you mean ‘QIO_PARTFILE’?
   else if(volfmt == QIO_PARTFILE_DIR){
                     ^~~~~~~~~~~~~~~~
                     QIO_PARTFILE
../generic/io_scidac.c: In function ‘save_real_scidac_from_field’:
../generic/io_scidac.c:1223:21: error: ‘QIO_PARTFILE_DIR’ undeclared (first use in this function); did you mean ‘QIO_PARTFILE’?
   else if(volfmt == QIO_PARTFILE_DIR){
                     ^~~~~~~~~~~~~~~~
                     QIO_PARTFILE
../generic/io_scidac.c: In function ‘save_real_scidac_from_site’:
../generic/io_scidac.c:1284:21: error: ‘QIO_PARTFILE_DIR’ undeclared (first use in this function); did you mean ‘QIO_PARTFILE’?
   else if(volfmt == QIO_PARTFILE_DIR){
                     ^~~~~~~~~~~~~~~~
                     QIO_PARTFILE
../generic/io_scidac.c: In function ‘save_partfile_dir_scidac’:
../generic/io_scidac.c:326:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
../generic/io_scidac.c: In function ‘save_partfile_dir_ildg’:
../generic/io_scidac.c:351:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
make[1]: *** [io_scidac.o] Error 1
make: *** [ks_spectrum_naive] Error 2
